--- a/src/components/chatBot.css
+++ b/src/components/chatBot.css
@@ -4,7 +4,7 @@
     border-radius:  50%;
     margin: 5px;
     border: none;
-    background-color: blue;
+    background-color:rgb(8, 32, 50);
 
 }
 
@@ -44,17 +44,17 @@
 }
 
 .botmsg{
-    min-height: 45px;
     /* padding-top: 6px; */
     /* padding-bottom: 4px; */
     border-radius: 12px;
     /* max-width: 20rem; */
     background-color: #f4f7f9;
     color: #000;
-    padding: 10px 20px;
     margin: 0;
-    width: fit-content;
+    width: 30vw;
     border-radius: 0 14px 14px 14px;
+    padding: 10px 20px;
+    width: 20vw;
 }
 
 .usermsg{
@@ -131,6 +131,7 @@
 
 .sendBtn{
     font-size:25px;
+    color: #fff;
 }
 .chatform{
     display: flex;
